# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-15 17:00:54 GMT	John Goerzen <jgoerzen@complete.org>	patch-67

    Summary:
      Initial HVIO work
    Revision:
      missingh--head--0.7--patch-67


    new files:
     libsrc/MissingH/HVIO.hs

    modified files:
     ChangeLog


2004-12-15 15:44:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-66

    Summary:
      Deferring Gopher development for now
    Revision:
      missingh--head--0.7--patch-66


    new files:
     pending/.arch-ids/=id

    modified files:
     ChangeLog

    renamed files:
     libsrc/MissingH/Network/Gopher.hs
       ==> pending/Gopher.hs

    new directories:
     pending pending/.arch-ids


2004-12-14 23:00:15 GMT	John Goerzen <jgoerzen@complete.org>	patch-65

    Summary:
      preliminary gopher work
    Revision:
      missingh--head--0.7--patch-65


    new files:
     libsrc/MissingH/Network/Gopher.hs

    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs


2004-12-10 22:47:12 GMT	John Goerzen <jgoerzen@complete.org>	patch-64

    Summary:
      Updated README
    Revision:
      missingh--head--0.7--patch-64


    modified files:
     ChangeLog README


2004-12-10 22:44:26 GMT	John Goerzen <jgoerzen@complete.org>	patch-63

    Summary:
      Added debugging to popen
    Revision:
      missingh--head--0.7--patch-63


    modified files:
     ChangeLog libsrc/MissingH/Cmd.hs


2004-12-10 00:01:05 GMT	John Goerzen <jgoerzen@complete.org>	patch-62

    Summary:
      fixed a syntax error
    Revision:
      missingh--head--0.7--patch-62


    modified files:
     ChangeLog libsrc/MissingH/Email/Parser.hs


2004-12-09 20:16:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-61

    Summary:
      Backed out custom mail parser; documented one in wash instead
    Revision:
      missingh--head--0.7--patch-61


    modified files: