@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
 #
 
+2004-12-15 19:05:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-68
+
+    Summary:
+      Checkpointing work
+    Revision:
+      missingh--head--0.7--patch-68
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/HVIO.hs
+
+
 2004-12-15 17:00:54 GMT	John Goerzen <jgoerzen@complete.org>	patch-67
 
     Summary:
